Update interest calculation logic